// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@xsai-ext/responses basic > basic 1`] = `"Hello! 👋 It's great to meet you, and I'm here to help you with anything. How can I assist you today?"`;

exports[`@xsai-ext/responses basic > basic 2`] = `
[
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777973099,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_638146",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 0,
    "type": "response.created",
  },
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777973099,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_638146",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 1,
    "type": "response.in_progress",
  },
  {
    "item": {
      "id": "rs_755256",
      "summary": [],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 2,
    "type": "response.output_item.added",
  },
  {
    "delta": "The",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 3,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " user",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 4,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " is",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 5,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " greeting",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 6,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " me",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 7,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " with",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 8,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " "",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 9,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "Hello",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 10,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "!"",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 11,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 12,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " need",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 13,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 14,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " acknowledge",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 15,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 16,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " greeting",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 17,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " warmly",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 18,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " and",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 19,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " maintain",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 20,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " a",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 21,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " friendly",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 22,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ",",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 23,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " professional",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 24,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " tone",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 25,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 26,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " My",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 27,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " goal",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 28,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " is",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 29,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 30,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " help",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 31,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " with",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 32,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " whatever",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 33,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " they",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 34,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " need",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 35,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " or",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 36,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " ask",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 37,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " me",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 38,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " how",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 39,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 40,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " can",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 41,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " assist",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 42,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 43,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "

I",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 44,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " should",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 45,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " respond",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 46,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " positively",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 47,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " and",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 48,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " offer",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 49,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " helpful",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 50,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " assistance",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 51,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 52,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 53,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " need",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 54,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 55,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " be",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 56,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " concise",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 57,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " and",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 58,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " engaging",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 59,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " while",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 60,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " being",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 61,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " clear",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 62,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " that",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 63,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 64,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "'m",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 65,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " ready",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 66,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 67,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " help",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 68,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 69,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "item_id": "rs_755256",
    "output_index": 0,
    "sequence_number": 70,
    "summary_index": 0,
    "text": "The user is greeting me with "Hello!" I need to acknowledge the greeting warmly and maintain a friendly, professional tone. My goal is to help with whatever they need or ask me how I can assist.

I should respond positively and offer helpful assistance. I need to be concise and engaging while being clear that I'm ready to help.",
    "type": "response.reasoning_summary_text.done",
  },
  {
    "item": {
      "encrypted_content": "The user is greeting me with "Hello!" I need to acknowledge the greeting warmly and maintain a friendly, professional tone. My goal is to help with whatever they need or ask me how I can assist.

I should respond positively and offer helpful assistance. I need to be concise and engaging while being clear that I'm ready to help.",
      "id": "rs_755256",
      "summary": [
        {
          "text": "The user is greeting me with "Hello!" I need to acknowledge the greeting warmly and maintain a friendly, professional tone. My goal is to help with whatever they need or ask me how I can assist.

I should respond positively and offer helpful assistance. I need to be concise and engaging while being clear that I'm ready to help.",
          "type": "summary_text",
        },
      ],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 71,
    "type": "response.output_item.done",
  },
  {
    "item": {
      "content": [],
      "id": "msg_434082",
      "role": "assistant",
      "status": "in_progress",
      "type": "message",
    },
    "output_index": 1,
    "sequence_number": 72,
    "type": "response.output_item.added",
  },
  {
    "content_index": 0,
    "item_id": "msg_434082",
    "output_index": 1,
    "part": {
      "annotations": [],
      "logprobs": [],
      "text": "",
      "type": "output_text",
    },
    "sequence_number": 73,
    "type": "response.content_part.added",
  },
  {
    "content_index": 0,
    "delta": "Hello",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 74,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "!",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 75,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " 👋",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 76,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " It",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 77,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "'s",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 78,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " great",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 79,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " to",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 80,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " meet",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 81,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 82,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ",",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 83,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " and",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 84,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " I",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 85,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "'m",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 86,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " here",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 87,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " to",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 88,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " help",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 89,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 90,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " with",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 91,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " anything",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 92,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ".",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 93,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " How",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 94,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " can",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 95,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " I",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 96,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " assist",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 97,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 98,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " today",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 99,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "?",
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 100,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "item_id": "msg_434082",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 101,
    "text": "Hello! 👋 It's great to meet you, and I'm here to help you with anything. How can I assist you today?",
    "type": "response.output_text.done",
  },
  {
    "content_index": 0,
    "item_id": "msg_434082",
    "output_index": 1,
    "part": {
      "annotations": [],
      "logprobs": [],
      "text": "Hello! 👋 It's great to meet you, and I'm here to help you with anything. How can I assist you today?",
      "type": "output_text",
    },
    "sequence_number": 102,
    "type": "response.content_part.done",
  },
  {
    "item": {
      "content": [
        {
          "annotations": [],
          "logprobs": [],
          "text": "Hello! 👋 It's great to meet you, and I'm here to help you with anything. How can I assist you today?",
          "type": "output_text",
        },
      ],
      "id": "msg_434082",
      "role": "assistant",
      "status": "completed",
      "type": "message",
    },
    "output_index": 1,
    "sequence_number": 103,
    "type": "response.output_item.done",
  },
  {
    "response": {
      "background": false,
      "completed_at": 1777973100,
      "created_at": 1777973100,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_638146",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [
        {
          "encrypted_content": "The user is greeting me with "Hello!" I need to acknowledge the greeting warmly and maintain a friendly, professional tone. My goal is to help with whatever they need or ask me how I can assist.

I should respond positively and offer helpful assistance. I need to be concise and engaging while being clear that I'm ready to help.",
          "id": "rs_755256",
          "summary": [
            {
              "text": "The user is greeting me with "Hello!" I need to acknowledge the greeting warmly and maintain a friendly, professional tone. My goal is to help with whatever they need or ask me how I can assist.

I should respond positively and offer helpful assistance. I need to be concise and engaging while being clear that I'm ready to help.",
              "type": "summary_text",
            },
          ],
          "type": "reasoning",
        },
        {
          "content": [
            {
              "annotations": [],
              "logprobs": [],
              "text": "Hello! 👋 It's great to meet you, and I'm here to help you with anything. How can I assist you today?",
              "type": "output_text",
            },
          ],
          "id": "msg_434082",
          "role": "assistant",
          "status": "completed",
          "type": "message",
        },
      ],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "completed",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": {
        "input_tokens": 23,
        "input_tokens_details": {
          "cached_tokens": 0,
        },
        "output_tokens": 100,
        "output_tokens_details": {
          "reasoning_tokens": 0,
        },
        "total_tokens": 123,
      },
    },
    "sequence_number": 104,
    "type": "response.completed",
  },
]
`;

exports[`@xsai-ext/responses basic > basic 3`] = `
{
  "input_tokens": 23,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 100,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 123,
}
`;

exports[`@xsai-ext/responses basic > basic 4`] = `
{
  "input_tokens": 23,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 100,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 123,
}
`;

exports[`@xsai-ext/responses basic > tool calls 1`] = `
[
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777973100,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_627082",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [
        {
          "description": "Adds two numbers",
          "name": "add",
          "parameters": {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "additionalProperties": false,
            "properties": {
              "a": {
                "description": "First number",
                "type": "string",
              },
              "b": {
                "description": "Second number",
                "type": "string",
              },
            },
            "required": [
              "a",
              "b",
            ],
            "type": "object",
          },
          "strict": true,
          "type": "function",
        },
      ],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 0,
    "type": "response.created",
  },
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777973100,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_627082",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [
        {
          "description": "Adds two numbers",
          "name": "add",
          "parameters": {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "additionalProperties": false,
            "properties": {
              "a": {
                "description": "First number",
                "type": "string",
              },
              "b": {
                "description": "Second number",
                "type": "string",
              },
            },
            "required": [
              "a",
              "b",
            ],
            "type": "object",
          },
          "strict": true,
          "type": "function",
        },
      ],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 1,
    "type": "response.in_progress",
  },
  {
    "item": {
      "id": "rs_513341",
      "summary": [],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 2,
    "type": "response.output_item.added",
  },
  {
    "delta": "The",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 3,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " user",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 4,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " wants",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 5,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 6,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " know",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 7,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " how",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 8,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " many",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 9,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " times",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 10,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 11,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 12,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 13,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "5",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 14,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 15,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 16,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " plus",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 17,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 18,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 19,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 20,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 21,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "8",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 22,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 23,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "0",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 24,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " equals",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 25,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ",",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 26,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " and",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 27,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 28,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " need",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 29,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 30,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " use",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 31,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 32,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " \`",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 33,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "add",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 34,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "\`",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 35,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " tool",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 36,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 37,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " solve",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 38,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " this",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 39,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 40,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "

Let",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 41,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " me",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 42,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " first",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 43,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " understand",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 44,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " what",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 45,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " they",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 46,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "'re",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 47,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " asking",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 48,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ":",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 49,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "
-",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 50,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " They",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 51,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " want",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 52,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 53,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " find",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 54,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " out",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 55,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 56,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " number",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 57,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " of",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 58,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " times",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 59,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " this",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 60,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " expression",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 61,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " equals",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 62,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "
-",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 63,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 64,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " should",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 65,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " call",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 66,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 67,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " \`",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 68,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "add",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 69,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "\`",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 70,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " tool",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 71,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 72,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " perform",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 73,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 74,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " addition",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 75,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " and",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 76,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " show",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 77,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 78,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " result",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 79,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "
-",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 80,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " They",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 81,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " want",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 82,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 83,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " know",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 84,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " "",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 85,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "how",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 86,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " many",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 87,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " times",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 88,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " does",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 89,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " it",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 90,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " equal",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 91,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": """,
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 92,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " -",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 93,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " this",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 94,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " could",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 95,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " mean",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 96,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ":",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 97,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "
  1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 98,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 99,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " The",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 100,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " result",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 101,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " of",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 102,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 103,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " expression",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 104,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " (",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 105,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "how",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 106,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " many",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 107,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " times",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 108,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 109,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 110,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 111,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "5",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 112,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 113,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 114,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " appears",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 115,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " in",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 116,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 117,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " result",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 118,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ")",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 119,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "
  2",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 120,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 121,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " Or",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 122,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " they",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 123,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "'re",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 124,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " asking",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 125,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " for",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 126,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " an",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 127,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " integer",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 128,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " count",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 129,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " where",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 130,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " we",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 131,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "'re",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 132,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " dividing",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 133,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " by",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 134,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 135,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " divisor",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 136,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "

Actually",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 137,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ",",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 138,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " looking",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 139,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " at",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 140,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 141,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " expression",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 142,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " "",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 143,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 144,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 145,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 146,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "5",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 147,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 148,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 149,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " plus",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 150,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 151,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 152,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 153,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 154,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "8",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 155,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 156,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "0",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 157,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "",",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 158,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " they",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 159,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " want",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 160,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 161,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " know",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 162,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " if",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 163,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " this",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 164,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " equals",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 165,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 166,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 167,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 168,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "5",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 169,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 170,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 171,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ",",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 172,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 173,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 174,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 175,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 176,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "8",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 177,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 178,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "0",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 179,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ",",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 180,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " or",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 181,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " some",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 182,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " other",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 183,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " value",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 184,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 185,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "

Let",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 186,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " me",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 187,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " first",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 188,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " perform",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 189,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 190,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " addition",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 191,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " using",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 192,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 193,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " add",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 194,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " tool",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 195,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ",",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 196,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " then",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 197,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " provide",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 198,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " a",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 199,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " helpful",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 200,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " answer",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 201,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 202,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "item_id": "rs_513341",
    "output_index": 0,
    "sequence_number": 203,
    "summary_index": 0,
    "text": "The user wants to know how many times 114514 plus 1919810 equals, and I need to use the \`add\` tool to solve this.

Let me first understand what they're asking:
- They want to find out the number of times this expression equals
- I should call the \`add\` tool to perform the addition and show the result
- They want to know "how many times does it equal" - this could mean:
  1. The result of the expression (how many times 114514 appears in the result)
  2. Or they're asking for an integer count where we're dividing by the divisor

Actually, looking at the expression "114514 plus 1919810", they want to know if this equals 114514, 1919810, or some other value.

Let me first perform the addition using the add tool, then provide a helpful answer.",
    "type": "response.reasoning_summary_text.done",
  },
  {
    "item": {
      "encrypted_content": "The user wants to know how many times 114514 plus 1919810 equals, and I need to use the \`add\` tool to solve this.

Let me first understand what they're asking:
- They want to find out the number of times this expression equals
- I should call the \`add\` tool to perform the addition and show the result
- They want to know "how many times does it equal" - this could mean:
  1. The result of the expression (how many times 114514 appears in the result)
  2. Or they're asking for an integer count where we're dividing by the divisor

Actually, looking at the expression "114514 plus 1919810", they want to know if this equals 114514, 1919810, or some other value.

Let me first perform the addition using the add tool, then provide a helpful answer.",
      "id": "rs_513341",
      "summary": [
        {
          "text": "The user wants to know how many times 114514 plus 1919810 equals, and I need to use the \`add\` tool to solve this.

Let me first understand what they're asking:
- They want to find out the number of times this expression equals
- I should call the \`add\` tool to perform the addition and show the result
- They want to know "how many times does it equal" - this could mean:
  1. The result of the expression (how many times 114514 appears in the result)
  2. Or they're asking for an integer count where we're dividing by the divisor

Actually, looking at the expression "114514 plus 1919810", they want to know if this equals 114514, 1919810, or some other value.

Let me first perform the addition using the add tool, then provide a helpful answer.",
          "type": "summary_text",
        },
      ],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 204,
    "type": "response.output_item.done",
  },
  {
    "item": {
      "content": [],
      "id": "msg_342811",
      "role": "assistant",
      "status": "in_progress",
      "type": "message",
    },
    "output_index": 1,
    "sequence_number": 205,
    "type": "response.output_item.added",
  },
  {
    "content_index": 0,
    "item_id": "msg_342811",
    "output_index": 1,
    "part": {
      "annotations": [],
      "logprobs": [],
      "text": "",
      "type": "output_text",
    },
    "sequence_number": 206,
    "type": "response.content_part.added",
  },
  {
    "content_index": 0,
    "delta": "I",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 207,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "'ll",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 208,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " help",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 209,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 210,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " find",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 211,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " out",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 212,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " how",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 213,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " many",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 214,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " times",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 215,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " 1",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 216,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "1",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 217,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "4",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 218,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "5",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 219,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "1",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 220,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "4",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 221,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " plus",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 222,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " 1",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 223,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "9",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 224,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "1",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 225,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "9",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 226,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "8",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 227,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "1",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 228,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "0",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 229,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " equals",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 230,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ".",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 231,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " Let",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 232,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " me",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 233,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " use",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 234,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " the",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 235,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " \`",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 236,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "add",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 237,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "\`",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 238,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " tool",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 239,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " to",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 240,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " perform",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 241,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " this",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 242,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " calculation",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 243,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " for",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 244,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 245,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ".",
    "item_id": "msg_342811",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 246,
    "type": "response.output_text.delta",
  },
  {
    "item": {
      "arguments": "",
      "call_id": "call_wn1zmdha",
      "id": "fc_333168_0",
      "name": "add",
      "status": "in_progress",
      "type": "function_call",
    },
    "output_index": 1,
    "sequence_number": 247,
    "type": "response.output_item.added",
  },
  {
    "delta": "{"a":"114514","b":"1919810"}",
    "item_id": "fc_333168_0",
    "output_index": 1,
    "sequence_number": 248,
    "type": "response.function_call_arguments.delta",
  },
  {
    "arguments": "{"a":"114514","b":"1919810"}",
    "item_id": "fc_333168_0",
    "output_index": 1,
    "sequence_number": 249,
    "type": "response.function_call_arguments.done",
  },
  {
    "item": {
      "arguments": "{"a":"114514","b":"1919810"}",
      "call_id": "call_wn1zmdha",
      "id": "fc_333168_0",
      "name": "add",
      "status": "completed",
      "type": "function_call",
    },
    "output_index": 1,
    "sequence_number": 250,
    "type": "response.output_item.done",
  },
  {
    "response": {
      "background": false,
      "completed_at": 1777973101,
      "created_at": 1777973101,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_627082",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [
        {
          "encrypted_content": "The user wants to know how many times 114514 plus 1919810 equals, and I need to use the \`add\` tool to solve this.

Let me first understand what they're asking:
- They want to find out the number of times this expression equals
- I should call the \`add\` tool to perform the addition and show the result
- They want to know "how many times does it equal" - this could mean:
  1. The result of the expression (how many times 114514 appears in the result)
  2. Or they're asking for an integer count where we're dividing by the divisor

Actually, looking at the expression "114514 plus 1919810", they want to know if this equals 114514, 1919810, or some other value.

Let me first perform the addition using the add tool, then provide a helpful answer.",
          "id": "rs_513341",
          "summary": [
            {
              "text": "The user wants to know how many times 114514 plus 1919810 equals, and I need to use the \`add\` tool to solve this.

Let me first understand what they're asking:
- They want to find out the number of times this expression equals
- I should call the \`add\` tool to perform the addition and show the result
- They want to know "how many times does it equal" - this could mean:
  1. The result of the expression (how many times 114514 appears in the result)
  2. Or they're asking for an integer count where we're dividing by the divisor

Actually, looking at the expression "114514 plus 1919810", they want to know if this equals 114514, 1919810, or some other value.

Let me first perform the addition using the add tool, then provide a helpful answer.",
              "type": "summary_text",
            },
          ],
          "type": "reasoning",
        },
        {
          "arguments": "{"a":"114514","b":"1919810"}",
          "call_id": "call_wn1zmdha",
          "id": "fc_333168_0",
          "name": "add",
          "status": "completed",
          "type": "function_call",
        },
      ],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": null,
      "safety_identifier": null,
      "service_tier": "default",
      "status": "completed",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [
        {
          "description": "Adds two numbers",
          "name": "add",
          "parameters": {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "additionalProperties": false,
            "properties": {
              "a": {
                "description": "First number",
                "type": "string",
              },
              "b": {
                "description": "Second number",
                "type": "string",
              },
            },
            "required": [
              "a",
              "b",
            ],
            "type": "object",
          },
          "strict": true,
          "type": "function",
        },
      ],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": {
        "input_tokens": 333,
        "input_tokens_details": {
          "cached_tokens": 0,
        },
        "output_tokens": 310,
        "output_tokens_details": {
          "reasoning_tokens": 0,
        },
        "total_tokens": 643,
      },
    },
    "sequence_number": 251,
    "type": "response.completed",
  },
]
`;

exports[`@xsai-ext/responses basic > tool calls 2`] = `
{
  "input_tokens": 333,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 310,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 643,
}
`;

exports[`@xsai-ext/responses basic > tool calls 3`] = `
{
  "input_tokens": 333,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 310,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 643,
}
`;
